--- a/index.html
+++ b/index.html
@@ -49,19 +49,18 @@
   <section>
     <h2>このサイトについて</h2>
     <p>
-      将棋棋士に関するデータを集め、ランキング・プロフィール検索・年齢比較などを掲載しています。
-      スマホ閲覧を優先して作られており、随時機能追加・改良中です。
+      将棋棋士に関する汎ゆるデータを集め、ランキング・プロフィール検索・年齢比較などを掲載しています。
     </p>
   </section>
 
   <section>
     <h2>成績・ランキング</h2>
     <ul>
-      <li><a href="https://ulti-shogi.github.io/beta-open/title/title.html">新・title.html</a></li>
-      <li><a href="https://ulti-shogi.github.io/beta-open/rate/rate.html">歴代年度勝率8割以上達成者</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/title-all.html">歴代タイトル獲得経験者</a></li>
+      <li><a href="https://ulti-shogi.github.io/beta-open/title/title.html">新・title.html</a></li>
+      <li><a href="https://ulti-shogi.github.io/beta-open/victory/victory.html">新生title→victory</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/prize-ranking/prize-ranking.html">対局料・賞金ランキング一覧</a></li>
-      <li><a href="https://ulti-shogi.github.io/beta-open/akahata.html">歴代新人王戦結果一覧</a></li>
+      <li><a href="https://ulti-shogi.github.io/beta-open/rate/rate.html">歴代年度勝率8割以上達成者</a></li>
     </ul>
   </section>
 
