--- a/victory/victory.html
+++ b/victory/victory.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- victory-basic-a -->
+<!-- victory-20251210-b -->
 
 <html lang="ja">
 <head>
@@ -129,7 +129,7 @@
   </main>
   <footer>フッター</footer>
 
-  <script src="victory.js?v=20251209-1" defer></script>
+  <script src="victory.js?v=20251210-1" defer></script>
 </body>
 </html>
 
