--- a/victory/victory.html
+++ b/victory/victory.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- victory-20251210-b -->
+<!-- victory-20251210-c -->
 
 <html lang="ja">
 <head>
@@ -28,7 +28,7 @@
 <p><a href="https://ulti-shogi.github.io/beta-open/index.html">TOPページに戻る</a></>
 </header>
   <main>
-<h2>タイトル・一般棋戦検索</h2>
+<h2>優勝回数検索</h2>
 <section>
   <p>表示する内容を選択してください。</p>
   <label><input type="radio" name="mode" value="match" checked>歴代タイトル戦結果一覧</label>
@@ -129,7 +129,7 @@
   </main>
   <footer>フッター</footer>
 
-  <script src="victory.js?v=20251210-1" defer></script>
+  <script src="victory.js?v=20251210-2" defer></script>
 </body>
 </html>
 
