--- a/victory/victory.html
+++ b/victory/victory.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- victory-20251210-e -->
+<!-- victory-20251210-f -->
 
 <html lang="ja">
 <head>
@@ -28,8 +28,9 @@
 <p><a href="https://ulti-shogi.github.io/beta-open/index.html">TOPページに戻る</a></>
 </header>
   <main>
-<h2>優勝回数検索</h2>
+
 <section>
+    <h2>優勝回数検索</h2>
   <p>表示する内容を選択してください。</p>
 
 <select name="mode" id="modeSelect">
@@ -132,7 +133,7 @@
   </main>
   <footer>フッター</footer>
 
-  <script src="victory.js?v=20251210-4" defer></script>
+  <script src="victory.js?v=20251210-5" defer></script>
 </body>
 </html>
 
