--- a/game-result.html
+++ b/game-result.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2025年度 対局結果（棋士名検索）</title>
+  <title>2025年度対局結果（銀河戦NHK杯除く）</title>
   <style>
     :root{
       --bg:#0b0c10;
