--- a/game-result.html
+++ b/game-result.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2025年度対局結果（銀河戦除く）</title>
+  <title>2025年度対局結果</title>
   <style>
     :root{
   --bg:#ffffff;
@@ -102,7 +102,7 @@ td.badge{font-family:var(--mono);font-weight:800;}
   <div class="wrap">
     <header>
       <div class="logo" aria-hidden="true"></div>
-      <h1>2025年度対局結果（銀河戦除く）</h1>
+      <h1>2025年度対局結果</h1>
     </header>
 
     <section class="card">
