--- a/game-result.html
+++ b/game-result.html
@@ -102,7 +102,7 @@ td.badge{font-family:var(--mono);font-weight:800;}
   <div class="wrap">
     <header>
       <div class="logo" aria-hidden="true"></div>
-      <h1>2025年度対局結果</h1>
+      <h1>日本将棋連盟2025年度対局結果</h1>
     </header>
 
     <section class="card">
