--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
   <section>
     <h2>成績・ランキング</h2>
     <ul>
-      <li><a href="https://ulti-shogi.github.io/beta-open/title-all.html">歴代タイトル獲得経験者</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/title/title.html">新・title.html</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/victory/victory.html">新生title→victory</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/prize-ranking/prize-ranking.html">対局料・賞金ランキング一覧</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/rate/rate.html">歴代年度勝率8割以上達成者</a></li>
-      <li><a href="https://ulti-shogi.github.io/beta-open/game-result.html">各年度棋士成績</a></li>
+      <li><a href="https://ulti-shogi.github.io/beta-open/game-result.html">各年度各棋士成績</a></li>
+      <li><a href="https://ulti-shogi.github.io/beta-open/game-result-all.html">各年度全棋士成績</a></li>
     </ul>
   </section>
 
