--- a/game-result-all.html
+++ b/game-result-all.html
@@ -38,6 +38,7 @@
     .err{border:1px solid #fecaca;background:#fff1f2;color:#991b1b;padding:10px;border-radius:12px;margin-bottom:12px;}
 
     table{width:100%;border-collapse:collapse;font-size:13px;}
+    table { table-layout: fixed; }
     th,td{border-bottom:1px solid var(--line);padding:8px 6px;text-align:left;vertical-align:top;}
     th{color:var(--muted);font-weight:800;font-size:12px;}
     td.num, th.num{text-align:right;font-family:var(--mono);}
